# isfreader

./: MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py
isfreader/: __init__.py  __meta__.py  py_isfreader.py
tests/: T0000CH1.ISF  test_isfreader.py
